# deepflow

agent/crates/profile/: Cargo.toml  build.rs  template.toml
agent/crates/profile/src/: bpf.rs  lib.rs  stack.rs
agent/crates/profile/src/bpf/: python.bpf.c  python.skel.rs
agent/crates/public/src/: netns.rs
agent/crates/public/src/utils/net/: linux.rs
agent/docker/: Dockerfile.debug
agent/src/ebpf/: mod.rs
agent/src/ebpf/kernel/: Makefile  perf_profiler.bpf.c  python_uprobe.bpf.c  socket_trace.bpf.c
agent/src/ebpf/kernel/include/: common.h  perf_profiler.h  rust_bindings.h
agent/src/ebpf/samples/rust/socket-tracer/src/: main.rs
agent/src/ebpf/user/: ctrl_tracer.c  probe.c  python_probe.c  socket.h
agent/src/ebpf/user/profile/: perf_profiler.c  stringifier.c
agent/src/rpc/: remote_exec.rs
server/: Dockerfile.ci  Makefile
server/controller/cloud/kubernetes_gather/: pod.go  pod_group.go
server/controller/common/: const.go
server/controller/common/logger/: logger.go  prefix.go
server/controller/http/router/: agent_cmd.go
server/controller/http/service/: agent_cmd.go
server/controller/model/: model.go
server/controller/recorder/: recorder.go
server/controller/recorder/cache/: logger.go
server/controller/recorder/cache/tool/: data_set.go
server/controller/tagrecorder/check/: tagrecorder.go
server/querier/engine/clickhouse/: clickhouse.go
