[package]
name = "profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["staticlib", "rlib"]

[dependencies]
gimli = "0.29"
libbpf-rs = "0.23"
object = "0.36"
thiserror = "1.0"

[build-dependencies]
libbpf-cargo = "0.23"
